# stardict-wrapper

./: Cargo.toml  README.md
src/: lib.rs
