[package]
name = "stardict_wrapper"
version = "0.1.0"
authors = ["Unit Mesh"]
description = ""
repository = ""
categories = ["parsing"]
keywords = [
]
license = "Apache-2.0"
edition = "2021"
include = [
]

[dependencies]
stardict_lib = { version = "0.1.11", features = ["sled"] }

[lib]
name = "stardict_wrapper"
path = "src/lib.rs"
crate-type = ["dylib"]

