[package]
name = "stardict_wrapper"
version = "0.0.4"
edition = "2021"
description = "Rust implement stardict"
authors = ["zang.loo"]
homepage = "https://github.com/zangloo/stardict"
repository = "https://github.com/zangloo/stardict.git"
keywords = ["stardict"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
stardict_lib = { version = "0.1.11", features = ["sled"] }

[lib]
name = "stardict_wrapper"
path = "src/lib.rs"
crate-type = ["dylib"]

